2008-04-01 Chris Morley

	* windows-vc2005/OBPythonOBF/OBPythonOBF.vcproj,
	* windows-vc2005/OpenBabelDLL/OpenBabelDLL.vcproj
	* windows-vc2005/Distribution/NSISScriptToCreateInstallerOBF.nsi
	Updated in minor ways
	
	* windows-vc2005/Projects in this workspace.txt: add OBF build

2008-04-01  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/python/setup.py: Error in my previous commit

2008-03-31  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h, src/forcefield.cpp: Fix conjugate
	gradients. (my previous commit had a bug..)

2008-03-31  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/python/setup.py: Fix for MacOSX to allow compiling against
	the contents of the build tree rather than /usr/local

2008-03-31 Chris Morley

	* src/GUI/OBGUI.cpp, src/GUI/OBGUI.h: Click on menu item copies
	plugin id to clipboard
	
2008-03-29  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefieldghemical.cpp,
	src/forcefields/forcefielduff.cpp,
	src/forcefields/forcefieldmmff94.cpp: Don't use Cut-off when disabled.

2008-03-29  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h, src/forcefield.cpp: Implement
	methods to handle cut-offs. Added SetLineSearchType().

	* src/forcefields/forcefieldghemical.*, src/forcefields/forcefielduff.*,
	src/forcefields/forcefieldmmff94.*: Use it.
	
	* tools/obminimize.cpp: Add new options to specify cut-off and linesearch.

2008-03-29 Chris Morley

	* src/formats/inchiformat.cpp: Add output options 
	"include fixed hydrogen layer" and "include bonds to metal"
	as shortcuts to NIST's InChI functionality.
	
	* include/openbabel/obconversion.h: Make default to OUTOPTIONS,
	as IsOptions does. Makes setting most options less cumbersome.


2008-03-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* data/UFF.prm: Improved N sp, sp2 atom typing, suggested by Bob Hanson.

	* src/forcefields/forcefielduff.*: Many bug fixes for angle and