@@ -1,3 +1,11 @@
+2008-04-02  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* src/forcefield.cpp: Remove inline declaration on constraints --
+	prevents Python script bindings from compiling.
+
+	* src/formats/hinformat.cpp: Read in partial charges. Fixes
+	PR#1931260.
+
 2008-04-01 Chris Morley
 
 	* windows-vc2005/OBPythonOBF/OBPythonOBF.vcproj,
